# bitbucket-versioning

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy_pypi.yml  pull_requests.yml
src/: __init__.py  main.py  setup.py  version_manager.py
tests/: test_version_manager.py
